# cmd/handler/auth.go
@@ -1,14 +1,22 @@
 package handler
 
 import (
+	"fmt"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 )
 
-type signUp struct {
+type Authorization interface {
+	CreateUser(login string, password string, email string) (int, error)
+	GenerateToken(login, password string) (string, error)
+	ParseToken(token string) (int, string, error)
+}
+
+type SignIn struct {
 	Login    string `json:"login" binding:"required,alphanum"`
 	Password string `json:"password" binding:"required,min=6"`
+	Email    string `json:"email" binding:"required,min=6"`
 }
 
 // @Summary SignUp
@@ -16,16 +24,23 @@ type signUp struct {
 // @Description create account
 // @Accept  json
 // @Produce  json
-// @Param input body signUp true "reg input"
+// @Param login query string true "your login"
+// @Param password query string true "your password"
+// @Param email query string true "your email"
 // @Router /auth/sign-up [post]
 func (h *Handler) signUp(c *gin.Context) {
-	var input signUp
-	if err := c.ShouldBindJSON(&input); err != nil {
+	input := SignIn{
+		Login:    c.Query("login"),
+		Password: c.Query("password"),
+		Email:    c.Query("email"),
+	}
+
+	if err := c.ShouldBind(&input); err != nil {
 		newErrorResponse(c, http.StatusBadRequest, err.Error())
 		return
 	}
 
-	id, err := h.services.Authorization.CreateUser(input.Login, input.Password)
+	id, err := h.Auth.CreateUser(input.Login, input.Password, input.Email)
 	if err != nil {
 		newErrorResponse(c, http.StatusInternalServerError, err.Error())
 		return
@@ -36,26 +51,22 @@ func (h *Handler) signUp(c *gin.Context) {
 	})
 }
 
-type signInInput struct {
-	Login    string `json:"login" binding:"required,alphanum"`
-	Password string `json:"password" binding:"required,min=6"`
-}
-
 // @Summary SignIn
 // @Tags auth
 // @Description login
 // @Accept  json
 // @Produce  json
-// @Param input body signInInput true "account info"
+// @Param login query string true "your login"
+// @Param password query string true "your password"
 // @Router /auth/sign-in [post]
 func (h *Handler) signIn(c *gin.Context) {
-	var input signInInput
-	if err := c.BindJSON(&input); err != nil {
-		newErrorResponse(c, http.StatusBadRequest, err.Error())
-		return
+	input := SignIn{
+		Login:    c.Query("login"),
+		Password: c.Query("password"),
 	}
+	fmt.Println(input)
 
-	token, err := h.services.Authorization.GenerateToken(input.Login, input.Password)
+	token, err := h.Auth.GenerateToken(input.Login, input.Password)
 	if err != nil {
 		newErrorResponse(c, http.StatusInternalServerError, err.Error())
 		return
