# docs/swagger.json
@@ -50,13 +50,18 @@
                 "summary": "Add product to your cart",
                 "parameters": [
                     {
-                        "description": "NewProduct",
-                        "name": "balance",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/handler.addProductToCart"
-                        }
+                        "type": "integer",
+                        "description": "Id of product",
+                        "name": "productId",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Quantity of product",
+                        "name": "quantity",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {}
@@ -173,13 +178,31 @@
                 "summary": "Add product",
                 "parameters": [
                     {
-                        "description": "NewProduct",
-                        "name": "product",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/handler.addProduct"
-                        }
+                        "type": "string",
+                        "description": "product name",
+                        "name": "name",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "number",
+                        "description": "price for product",
+                        "name": "cost",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "product description",
+                        "name": "description",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "amount of product",
+                        "name": "amount",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {}
@@ -316,13 +339,62 @@
                 "summary": "Delete user",
                 "parameters": [
                     {
-                        "description": "User data",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/handler.deleteAccount"
-                        }
+                        "type": "string",
+                        "description": "your login",
+                        "name": "login",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "your password",
+                        "name": "password",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/users/link/{service}": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "link your account with another service",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "link account",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "service",
+                        "name": "service",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "your login",
+                        "name": "login",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "your password",
+                        "name": "password",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {}
@@ -380,13 +452,11 @@
                         "required": true
                     },
                     {
-                        "description": "NewBalance",
+                        "type": "number",
+                        "description": "how many money do you want add/receive(type with -)",
                         "name": "balance",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/handler.changeBalance"
-                        }
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {}
@@ -407,13 +477,18 @@
                 "summary": "SignIn",
                 "parameters": [
                     {
-                        "description": "account info",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/handler.signInInput"
-                        }
+                        "type": "string",
+                        "description": "your login",
+                        "name": "login",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "your password",
+                        "name": "password",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {}
@@ -434,13 +509,25 @@
                 "summary": "SignUp",
                 "parameters": [
                     {
-                        "description": "reg input",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/handler.signUp"
-                        }
+                        "type": "string",
+                        "description": "your login",
+                        "name": "login",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "your password",
+                        "name": "password",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "your email",
+                        "name": "email",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {}
@@ -448,98 +535,6 @@
         }
     },
     "definitions": {
-        "handler.addProduct": {
-            "type": "object",
-            "required": [
-                "amount",
-                "cost",
-                "name"
-            ],
-            "properties": {
-                "amount": {
-                    "type": "integer"
-                },
-                "cost": {
-                    "type": "number"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "handler.addProductToCart": {
-            "type": "object",
-            "required": [
-                "product_id",
-                "quantity"
-            ],
-            "properties": {
-                "product_id": {
-                    "type": "integer"
-                },
-                "quantity": {
-                    "type": "integer"
-                }
-            }
-        },
-        "handler.changeBalance": {
-            "type": "object",
-            "properties": {
-                "balance": {
-                    "type": "number"
-                }
-            }
-        },
-        "handler.deleteAccount": {
-            "type": "object",
-            "required": [
-                "login",
-                "password"
-            ],
-            "properties": {
-                "login": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "handler.signInInput": {
-            "type": "object",
-            "required": [
-                "login",
-                "password"
-            ],
-            "properties": {
-                "login": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string",
-                    "minLength": 6
-                }
-            }
-        },
-        "handler.signUp": {
-            "type": "object",
-            "required": [
-                "login",
-                "password"
-            ],
-            "properties": {
-                "login": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string",
-                    "minLength": 6
-                }
-            }
-        },
         "models.UpdateProduct": {
             "type": "object",
             "properties": {
